# reaper-mcp

./: CLAUDE.md  README.md  TODO.md  justfile  pyproject.toml
.github/workflows/: release.yml
src/reaper_mcp/: __init__.py  __main__.py  client.py  server.py
tests/: conftest.py  test_client.py  test_fx_tools.py  test_item_tools.py  test_marker_tools.py  test_project_tools.py  test_qol_tools.py  test_track_tools.py  test_transport_tools.py
